--- a/initializr-service/src/main/resources/application.yml
+++ b/initializr-service/src/main/resources/application.yml
@@ -93,7 +93,10 @@ initializr:
           - versionRange: "[2.0.1.RELEASE,2.0.2.RELEASE)"
             version: Finchley.RC1
             repositories: spring-milestones
-          - versionRange: "2.0.2.RELEASE"
+          - versionRange: "[2.0.2.RELEASE,2.0.x.BUILD-SNAPSHOT)"
+            version: Finchley.RC2
+            repositories: spring-milestones
+          - versionRange: "2.0.x.BUILD-SNAPSHOT"
             version: Finchley.BUILD-SNAPSHOT
             repositories: spring-snapshots,spring-milestones
       spring-cloud-gcp:
