Upgrade to Spring Cloud Finchley.RELEASE
See gh-683

--- a/initializr-service/src/main/resources/application.yml
+++ b/initializr-service/src/main/resources/application.yml
@@ -93,9 +93,11 @@ initializr:
           - versionRange: "[2.0.1.RELEASE,2.0.2.RELEASE)"
             version: Finchley.RC1
             repositories: spring-milestones
-          - versionRange: "[2.0.2.RELEASE,2.0.x.BUILD-SNAPSHOT)"
+          - versionRange: "[2.0.2.RELEASE,2.0.3.RELEASE)"
             version: Finchley.RC2
             repositories: spring-milestones
+          - versionRange: "[2.0.3.RELEASE,2.0.x.BUILD-SNAPSHOT)"
+            version: Finchley.RELEASE
           - versionRange: "2.0.x.BUILD-SNAPSHOT"
             version: Finchley.BUILD-SNAPSHOT
             repositories: spring-snapshots,spring-milestones
