Enable Apache Camel when using Spring Boot 2.0
Signed-off-by: Claus Ibsen <claus.ibsen@gmail.com>

Closes gh-702

--- a/initializr-service/src/main/resources/application.yml
+++ b/initializr-service/src/main/resources/application.yml
@@ -1217,12 +1217,14 @@ initializr:
               href: http://docs.spring.io/spring-boot/docs/{bootVersion}/reference/htmlsingle/#boot-features-email
         - name: Apache Camel
           id: camel
-          versionRange: "[1.4.0.RELEASE,2.0.0.M1)"
+          versionRange: "1.4.0.RELEASE"
           mappings:
             - versionRange: "[1.4.0.RELEASE,1.5.0.RELEASE)"
               version: 2.18.5
             - versionRange: "[1.5.0.RELEASE,2.0.0.M1)"
               version: 2.21.1
+            - versionRange: "2.0.0.M1"
+              version: 2.22.0
           description: Integration using Apache Camel
           groupId: org.apache.camel
           artifactId: camel-spring-boot-starter
