Rework "Prevent build failure when tests are skipped"
This commit reworks e3d9c3c to enable the docs profile by default again
as it breaks the release on Artifactory. This has the side effect of
not running the tests used by the doc unless the docs profile is active.

--- a/initializr-docs/pom.xml
+++ b/initializr-docs/pom.xml
@@ -12,7 +12,7 @@
 
 	<properties>
 		<main.basedir>${basedir}/..</main.basedir>
-		<snippets.location>${project.build.directory}/snippets</snippets.location>
+		<maven.test.skip>true</maven.test.skip>
 	</properties>
 
 	<dependencies>
@@ -69,6 +69,10 @@
 	<profiles>
 		<profile>
 			<id>docs</id>
+			<properties>
+				<maven.test.skip>false</maven.test.skip>
+				<snippets.location>${project.build.directory}/snippets</snippets.location>
+			</properties>
 			<build>
 				<plugins>
 					<plugin>
