--- a/initializr-service/pom.xml
+++ b/initializr-service/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>io.spring.initializr</groupId>
 		<artifactId>initializr</artifactId>
-		<version>0.6.0.BUILD-SNAPSHOT</version>
+		<version>0.6.0.RELEASE</version>
 	</parent>
 	<artifactId>initializr-service</artifactId>
 	<name>Spring Initializr :: Service</name>
