--- a/initializr-service/src/main/resources/application.yml
+++ b/initializr-service/src/main/resources/application.yml
@@ -12,6 +12,7 @@ server:
     enabled: true
     mime-types: application/json,text/css,text/html
     min-response-size: 2048
+  port: 8081
 
 spring:
   jackson:
@@ -1304,6 +1305,11 @@ initializr:
           versionRange: "[1.3.0.RELEASE,2.0.0.M1)"
           groupId: org.springframework.boot
           artifactId: spring-boot-actuator-docs
+    - name: TEST-HELLO
+      content:
+        - name: zyj
+          id: test-zyj
+          description: zyj-test
   types:
     - name: Maven Project
       id: maven-project
